--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 node_modules/
 npm-debug.log
 yarn-error.log
+/db-data/private_key.pem
+/db-data/ca-key.pem
 
 # Laravel 4 specific
 bootstrap/compiled.php
